<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearbottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/lightgray"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/bottomhome"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/home"
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bottomhome_selector"
                />
            <TextView
                android:id="@+id/texthome"
                android:layout_width="wrap_content"
                android:layout_below="@id/home"
                android:layout_marginTop="7dp"
                android:layout_centerHorizontal="true"
                android:textSize="9sp"
                android:textColor="@drawable/bottomtext_selector"
                android:layout_height="wrap_content"
                android:text="@string/bottom_home"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bottomask"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageask"
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bottommore_selector"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_below="@id/imageask"
                android:layout_marginTop="7dp"
                android:textSize="9sp"
                android:layout_centerHorizontal="true"
                android:textColor="@drawable/bottomtext_selector"
                android:layout_height="wrap_content"
                android:text="@string/bottom_server"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bottomy"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/more"
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:src="@drawable/bottommy_selector"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_below="@id/more"
                android:layout_marginTop="7dp"
                android:textSize="9sp"
                android:layout_centerHorizontal="true"
                android:textColor="@drawable/bottomtext_selector"
                android:layout_height="wrap_content"
                android:text="@string/bottom_my"
                android:id="@+id/textView6" />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/fragementcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearbottom">
    </RelativeLayout>
</RelativeLayout>
