<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bibinet.biunion.project.ui.fragment.Fragment_Home">



    <include layout="@layout/item_homesearch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#F4F4F4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/projectInfo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/projectInfo"
                android:textColor="#F57300"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="11dp"
                android:layout_height="7dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:src="@mipmap/img_spring_down" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/projectNameOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/projecNameOne"
                    android:textColor="@drawable/radiotext_selector"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/projectNameTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/projecNameTwo"
                    android:gravity="center"
                    android:textColor="@drawable/radiotext_selector"
                    android:textSize="11sp"
                    />
                <RadioButton
                    android:id="@+id/projectNameThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/projecNameThree"
                    android:gravity="center"
                    android:textColor="@drawable/radiotext_selector"
                    android:textSize="11sp"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal">
                <View
                    android:id="@+id/projectNameOneBottomLine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:visibility="gone"
                    />
                <View
                    android:id="@+id/projectNameTwoBottomLine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:visibility="gone"
                    />
                <View
                    android:id="@+id/projectNameThreeBottomLine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/moreProject"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/more"
                />
        </RelativeLayout>

    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeReresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/projectInfoRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="#F4F4F4" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>

